--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <script src="https://threejs.org/build/three.js"></script>
-        <script src="https://threejs.org/examples/jsm/controls/OrbitControls.js"></script>
-        <script src="https://threejs.org/examples/jsm/loaders/GLTFLoader.js"></script>
+        <script type="module" src="https://threejs.org/examples/jsm/controls/OrbitControls.js"></script>
+        <script type="module" src="https://threejs.org/examples/jsm/loaders/GLTFLoader.js"></script>
         <script src="./script.js"></script>
     </body>
 </html>
