--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
         </style>
     </head>
     <body>
+        <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>    
+        <script type="importmap">
+            {
+                "imports": {
+                    "three": "https://unpkg.com/three/build/three.module.js"
+                }
+            }
+        </script>
         <script type="module" src="./script.js"></script>
+        
     </body>
 </html>
