--- a/index4.html
+++ b/index4.html
@@ -5,6 +5,7 @@
 	{
 		"imports": {
 			"three": "https://unpkg.com/three/build/three.module.js",
+			"three/addons/": "https://unpkg.com/three/examples/jsm/"
 		}
 	}
 </script>
