--- a/index4.html
+++ b/index4.html
@@ -4,7 +4,7 @@
 <script type="importmap">
 	{
 		"imports": {
-			"three": "https://unpkg.com/three@v0.122.0/build/three.module.js",
+			"three": "https://unpkg.com/three/build/three.module.js",
 			"three/addons/": "https://unpkg.com/three/examples/jsm/"
 		}
 	}
