--- a/example.html
+++ b/example.html
@@ -37,6 +37,6 @@
 			}
 		}
 	</script>
-	<script type="module" src="example.html"></script>
+	<script type="module" src="example.js"></script>
 </body>
 </html>
